--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
     "nestjs-config": "^1.4.10",
     "reflect-metadata": "^0.1.13",
