--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nestjs-config": "^1.4.10",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
+    "slug": "^5.3.0",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.6"
   },
