--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.6.2",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "slug": "^5.3.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
