chore: eslint and ts ignore
Signed-off-by: 1103409364 <1103409364@qq.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noFallthroughCasesInSwitch": false,
     "outDir": "./dist",
     "baseUrl": "./",
-    "paths": { "@/*": ["src/*"] }
+    "paths": { "@/*": ["src/*"] },
+    "exclude": ["dist/*"],
   }
 }
