--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nestjs/testing": "^8.4.4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.26",
     "@types/supertest": "^2.0.12",
