--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.4",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
+    "nestjs-status-monitor": "^1.0.1",
     "nuid": "^1.1.6",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -55,6 +58,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.26",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
