--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.json\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "set NODE_ENV=dev && nest start --watch",
-    "start:debug": "set NODE_ENV=dev && nest start --debug --watch",
-    "start:prod": "set NODE_ENV=prod && node dist/main",
+    "start": "NODE_ENV=dev nest start",
+    "start:dev": "NODE_ENV=dev nest start --watch",
+    "start:debug": "NODE_ENV=dev nest start --debug --watch",
+    "start:prod": "NODE_ENV=prod node dist/main",
+    "start:win": "set NODE_ENV=dev && nest start",
+    "start:dev:win": "set NODE_ENV=dev && nest start --watch",
+    "start:debug:win": "set NODE_ENV=dev && nest start --debug --watch",
+    "start:prod:win": "set NODE_ENV=prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
