--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
+    "libreoffice-convert": "^1.4.1",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.6.2",
     "nestjs-status-monitor": "^1.0.1",
