--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-tesseract-ocr": "^2.2.1",
     "nuid": "^1.1.6",
     "passport-jwt": "^4.0.0",
+    "public-ip": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
@@ -80,7 +81,7 @@
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
