--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "swagger-ui-express": "^4.6.2",
     "typeorm": "^0.3.14",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.4.0",
