--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "rm -rf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.json\" \"test/**/*.ts\"",
     "start": "NODE_ENV=dev nest start",
     "start:dev": "NODE_ENV=dev nest start --watch",
     "start:debug": "NODE_ENV=dev nest start --debug --watch",
     "start:prod": "NODE_ENV=prod node dist/main",
-    "start:pm2": "pm2 start npm --name realword  -- run start:prod",
+    "start:pm2": "pm2 start npm --name realworld  -- run start:prod",
     "start:win": "set NODE_ENV=dev && nest start",
     "start:dev:win": "set NODE_ENV=dev && nest start --watch",
     "start:debug:win": "set NODE_ENV=dev && nest start --debug --watch",
     "start:prod:win": "set NODE_ENV=prod && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "reinstall": "rimraf node_modules && pnpm install",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -41,6 +42,7 @@
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.0",
     "libreoffice-convert": "^1.4.1",
+    "multer": "1.4.4-lts.1",
     "mysql2": "^3.2.1",
     "nest-winston": "^1.9.1",
     "nestjs-status-monitor": "^1.0.1",
