--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "rm -rf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.json\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=dev nest start",
-    "start:dev": "NODE_ENV=dev nest start --watch",
-    "start:debug": "NODE_ENV=dev nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/main",
-    "start:pm2": "pm2 start npm --name realworld  -- run start:prod",
-    "start:win": "set NODE_ENV=dev && nest start",
-    "start:dev:win": "set NODE_ENV=dev && nest start --watch",
-    "start:debug:win": "set NODE_ENV=dev && nest start --debug --watch",
-    "start:prod:win": "set NODE_ENV=prod && node dist/main",
+    "start": "cross-env NODE_ENV=development nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start:pm2": "pm2 start npm --name realworld  -- run start:production",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "reinstall": "rimraf node_modules && pnpm install",
     "test": "jest",
@@ -73,6 +69,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
