--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=3080
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
-DATABASE_TYPE=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_DATABASE=
-
+DB_HOST=localhost
+DB_PORT=3306
+DB_TYPE=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_DROP_SCHEMA=
 API_PREFIX=api
