--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
 PORT=3080
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
-DATABASE_TYPE=mysql
-DATABASE_USER=root
-DATABASE_PASSWORD=admin123
-DATABASE_DATABASE=realworld
-
+DB_HOST=localhost
+DB_PORT=3306
+DB_TYPE=mysql
+DB_USER=root
+DB_PASSWORD=admin123
+DB_NAME=realworld
+DB_DROP_SCHEMA=0
 API_PREFIX=api
