fix: Prettier- TypeError: Cannot read properties of undefined (reading 'uid')
Signed-off-by: wcs <1103409364@qq.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "custom": true, // Enable the `custom` dictionary
     "internal-terms": false // Disable the `internal-terms` dictionary
   },
+  "prettier.prettierPath": "./node_modules/prettier",
   "npm.packageManager": "pnpm"
 }
