--- a/package.json
+++ b/package.json
@@ -22,29 +22,28 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.json\" \"test/**/*.ts\""
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/config": "^2.3.4",
-    "@nestjs/core": "^9.4.3",
-    "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/platform-socket.io": "^9.4.3",
-    "@nestjs/schedule": "^2.2.3",
-    "@nestjs/serve-static": "^3.0.1",
-    "@nestjs/swagger": "^6.3.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.4.3",
+    "@nestjs/common": "^10.0.1",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.1",
+    "@nestjs/platform-express": "^10.0.1",
+    "@nestjs/platform-socket.io": "^10.0.1",
+    "@nestjs/schedule": "^3.0.1",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.0.1",
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.0.1",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.0",
     "libreoffice-convert": "^1.4.1",
-    "multer": "1.4.4-lts.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.5",
     "nest-winston": "^1.9.2",
     "nestjs-status-monitor": "^1.0.1",
     "node-tesseract-ocr": "^2.2.1",
     "nuid": "^1.1.6",
     "passport-jwt": "^4.0.1",
-    "public-ip": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
@@ -54,17 +53,17 @@
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
     "xlsx": "^0.18.5",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.6.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.3",
+    "@nestjs/cli": "^10.0.2",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.1",
     "@types/express": "^4.17.17",
-    "@types/jest": "29.5.0",
+    "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.16.18",
+    "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
