--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "build": "rm -rf dist && nest build",
+    "build": "nest build",
     "start:pm2": "pm2 start npm --name realworld -- run start:prod",
     "test": "jest",
     "test:watch": "jest --watch",
