--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "reinstall": "rimraf node_modules && pnpm install",
+    "reinstall": "rf -rf node_modules && pnpm install",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.json\" \"test/**/*.ts\""
   },
@@ -45,7 +45,6 @@
     "nuid": "^1.1.6",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
     "slug": "^8.2.2",
     "swagger-ui-express": "^4.6.3",
