--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "google-translate-api": "^2.3.0",
     "jsonwebtoken": "^9.0.0",
     "libreoffice-convert": "^1.4.1",
     "multer": "^1.4.5-lts.1",
